issue on the "refresh btn" on SQL Query page is not properly align on the ipad 1024 landscape resolution.

--- a/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
+++ b/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
@@ -4391,6 +4391,7 @@ svg.nvd3-svg { width:95% !important; }
     .server-info-heading .servIp {
   margin-left: 30%;
 }
+.refreshBtn { margin-bottom:10px;}
 }
 
 
